--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -370,10 +370,10 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="87dab215dcc94c8298c0a9110d62edba-47e7e1e1f46149e2915a26dacd1cc494" name="87dab215dcc94c8298c0a9110d62edba" class="tab" checked><label for="87dab215dcc94c8298c0a9110d62edba-47e7e1e1f46149e2915a26dacd1cc494" >General</label>
-<input type="radio" id="87dab215dcc94c8298c0a9110d62edba-256c07f1c49348719405a0dd7f03e91a" name="87dab215dcc94c8298c0a9110d62edba" class="tab" ><label for="87dab215dcc94c8298c0a9110d62edba-256c07f1c49348719405a0dd7f03e91a" >Startup</label>
-<input type="radio" id="87dab215dcc94c8298c0a9110d62edba-e5da38c5983647f992a354638f0aff8f" name="87dab215dcc94c8298c0a9110d62edba" class="tab" ><label for="87dab215dcc94c8298c0a9110d62edba-e5da38c5983647f992a354638f0aff8f" >Android</label>
-<input type="radio" id="87dab215dcc94c8298c0a9110d62edba-4d90fb34f88c4050a749507703b350a3" name="87dab215dcc94c8298c0a9110d62edba" class="tab" ><label for="87dab215dcc94c8298c0a9110d62edba-4d90fb34f88c4050a749507703b350a3" >iOS</label>
+<input type="radio" id="b85edf997c7b4caa9ce45a2880c693cb-709974717044447396130d97e7527cac" name="b85edf997c7b4caa9ce45a2880c693cb" class="tab" checked><label for="b85edf997c7b4caa9ce45a2880c693cb-709974717044447396130d97e7527cac" >General</label>
+<input type="radio" id="b85edf997c7b4caa9ce45a2880c693cb-d8dad913c5104c7dabb6babacb17d9c5" name="b85edf997c7b4caa9ce45a2880c693cb" class="tab" ><label for="b85edf997c7b4caa9ce45a2880c693cb-d8dad913c5104c7dabb6babacb17d9c5" >Startup</label>
+<input type="radio" id="b85edf997c7b4caa9ce45a2880c693cb-065752e8bcb944a0ad4fb9d8ed5b8722" name="b85edf997c7b4caa9ce45a2880c693cb" class="tab" ><label for="b85edf997c7b4caa9ce45a2880c693cb-065752e8bcb944a0ad4fb9d8ed5b8722" >Android</label>
+<input type="radio" id="b85edf997c7b4caa9ce45a2880c693cb-e3e16c06e1634bcaa9282f2f3bc3c8aa" name="b85edf997c7b4caa9ce45a2880c693cb" class="tab" ><label for="b85edf997c7b4caa9ce45a2880c693cb-e3e16c06e1634bcaa9282f2f3bc3c8aa" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
