--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -358,7 +358,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -368,11 +368,11 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="540dcbf471d7449bb74958f702bf5200-f3c03c1e0eb748418bbd2928dc8cb43a" name="540dcbf471d7449bb74958f702bf5200" class="tab" checked=""><label for="540dcbf471d7449bb74958f702bf5200-f3c03c1e0eb748418bbd2928dc8cb43a">General</label>
-<input type="radio" id="540dcbf471d7449bb74958f702bf5200-cf753340639747359c8eee7e734a23a3" name="540dcbf471d7449bb74958f702bf5200" class="tab"><label for="540dcbf471d7449bb74958f702bf5200-cf753340639747359c8eee7e734a23a3">Startup</label>
-<input type="radio" id="540dcbf471d7449bb74958f702bf5200-d00be9b8c18147658140fc4d3d0739ea" name="540dcbf471d7449bb74958f702bf5200" class="tab"><label for="540dcbf471d7449bb74958f702bf5200-d00be9b8c18147658140fc4d3d0739ea">Android</label>
-<input type="radio" id="540dcbf471d7449bb74958f702bf5200-a96e7e26cd6c449da70f888e9af07860" name="540dcbf471d7449bb74958f702bf5200" class="tab"><label for="540dcbf471d7449bb74958f702bf5200-a96e7e26cd6c449da70f888e9af07860">iOS</label>
-<input type="radio" id="540dcbf471d7449bb74958f702bf5200-45cd9bf29d88431287eb9a1f0f789cb1" name="540dcbf471d7449bb74958f702bf5200" class="tab"><label for="540dcbf471d7449bb74958f702bf5200-45cd9bf29d88431287eb9a1f0f789cb1">Windows</label>
+<input type="radio" id="8d7094ba97914bc8bfeb9608d1e94911-de0cac3eccc6492fa80c8be641155407" name="8d7094ba97914bc8bfeb9608d1e94911" class="tab" checked=""><label for="8d7094ba97914bc8bfeb9608d1e94911-de0cac3eccc6492fa80c8be641155407">General</label>
+<input type="radio" id="8d7094ba97914bc8bfeb9608d1e94911-19e33f89e0e946acbd19ba7ec8f525f7" name="8d7094ba97914bc8bfeb9608d1e94911" class="tab"><label for="8d7094ba97914bc8bfeb9608d1e94911-19e33f89e0e946acbd19ba7ec8f525f7">Startup</label>
+<input type="radio" id="8d7094ba97914bc8bfeb9608d1e94911-a8ac6319e1374054a0c63a23dc23524e" name="8d7094ba97914bc8bfeb9608d1e94911" class="tab"><label for="8d7094ba97914bc8bfeb9608d1e94911-a8ac6319e1374054a0c63a23dc23524e">Android</label>
+<input type="radio" id="8d7094ba97914bc8bfeb9608d1e94911-093c9d39742343c09219812c2dd3b9d0" name="8d7094ba97914bc8bfeb9608d1e94911" class="tab"><label for="8d7094ba97914bc8bfeb9608d1e94911-093c9d39742343c09219812c2dd3b9d0">iOS</label>
+<input type="radio" id="8d7094ba97914bc8bfeb9608d1e94911-0632c4e6014d4df1b7835a2b862c8b0b" name="8d7094ba97914bc8bfeb9608d1e94911" class="tab"><label for="8d7094ba97914bc8bfeb9608d1e94911-0632c4e6014d4df1b7835a2b862c8b0b">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
