--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,10 +369,10 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="833d0102d55e4f9983f4bb75f1ba2ab0-aac292fecb3b42fb9af0ba30e6c32134" name="833d0102d55e4f9983f4bb75f1ba2ab0" class="tab" checked><label for="833d0102d55e4f9983f4bb75f1ba2ab0-aac292fecb3b42fb9af0ba30e6c32134" >General</label>
-<input type="radio" id="833d0102d55e4f9983f4bb75f1ba2ab0-58401ada611b462a86ae6f1c7b8cb67d" name="833d0102d55e4f9983f4bb75f1ba2ab0" class="tab" ><label for="833d0102d55e4f9983f4bb75f1ba2ab0-58401ada611b462a86ae6f1c7b8cb67d" >Startup</label>
-<input type="radio" id="833d0102d55e4f9983f4bb75f1ba2ab0-b087ce3d3c55441aaa0ccf348cc8e9d4" name="833d0102d55e4f9983f4bb75f1ba2ab0" class="tab" ><label for="833d0102d55e4f9983f4bb75f1ba2ab0-b087ce3d3c55441aaa0ccf348cc8e9d4" >Android</label>
-<input type="radio" id="833d0102d55e4f9983f4bb75f1ba2ab0-0a420db8756e4dbdbcaf50e28540a153" name="833d0102d55e4f9983f4bb75f1ba2ab0" class="tab" ><label for="833d0102d55e4f9983f4bb75f1ba2ab0-0a420db8756e4dbdbcaf50e28540a153" >iOS</label>
+<input type="radio" id="9042b14c45ce4623bc49699bf8f5d88a-5d24c578103b468295898c5d3fe1e85e" name="9042b14c45ce4623bc49699bf8f5d88a" class="tab" checked><label for="9042b14c45ce4623bc49699bf8f5d88a-5d24c578103b468295898c5d3fe1e85e" >General</label>
+<input type="radio" id="9042b14c45ce4623bc49699bf8f5d88a-3cfb8e4d1f984cc18dac39919cf195e9" name="9042b14c45ce4623bc49699bf8f5d88a" class="tab" ><label for="9042b14c45ce4623bc49699bf8f5d88a-3cfb8e4d1f984cc18dac39919cf195e9" >Startup</label>
+<input type="radio" id="9042b14c45ce4623bc49699bf8f5d88a-82dc076244f047179121e8432727619b" name="9042b14c45ce4623bc49699bf8f5d88a" class="tab" ><label for="9042b14c45ce4623bc49699bf8f5d88a-82dc076244f047179121e8432727619b" >Android</label>
+<input type="radio" id="9042b14c45ce4623bc49699bf8f5d88a-56dd6c20d48148a9a027b34d93dc4e93" name="9042b14c45ce4623bc49699bf8f5d88a" class="tab" ><label for="9042b14c45ce4623bc49699bf8f5d88a-56dd6c20d48148a9a027b34d93dc4e93" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
