--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="f0098e89043e454382276574358b8bcb-cd5dd5ee3a9541abb04bb0281b8bde08" name="f0098e89043e454382276574358b8bcb" class="tab" checked><label for="f0098e89043e454382276574358b8bcb-cd5dd5ee3a9541abb04bb0281b8bde08" >General</label>
-<input type="radio" id="f0098e89043e454382276574358b8bcb-49f2717b972a4cf1b7a41ddd5a6eef8a" name="f0098e89043e454382276574358b8bcb" class="tab" ><label for="f0098e89043e454382276574358b8bcb-49f2717b972a4cf1b7a41ddd5a6eef8a" >Startup</label>
-<input type="radio" id="f0098e89043e454382276574358b8bcb-9aa3cabd3cda4de7902b04dbb6635719" name="f0098e89043e454382276574358b8bcb" class="tab" ><label for="f0098e89043e454382276574358b8bcb-9aa3cabd3cda4de7902b04dbb6635719" >Android</label>
-<input type="radio" id="f0098e89043e454382276574358b8bcb-fbfd248929754f0c908e222676ec43a8" name="f0098e89043e454382276574358b8bcb" class="tab" ><label for="f0098e89043e454382276574358b8bcb-fbfd248929754f0c908e222676ec43a8" >iOS</label>
-<input type="radio" id="f0098e89043e454382276574358b8bcb-61a1b49c864a4353a1c5d0cc68c38524" name="f0098e89043e454382276574358b8bcb" class="tab" ><label for="f0098e89043e454382276574358b8bcb-61a1b49c864a4353a1c5d0cc68c38524" >Windows</label>
+<input type="radio" id="20eca481c50c4244bec07ea54aaeb507-283fe3b7d9264a639afe74c0a1dbfb56" name="20eca481c50c4244bec07ea54aaeb507" class="tab" checked><label for="20eca481c50c4244bec07ea54aaeb507-283fe3b7d9264a639afe74c0a1dbfb56" >General</label>
+<input type="radio" id="20eca481c50c4244bec07ea54aaeb507-81494ddf278f4f7b823cd67e99dd0515" name="20eca481c50c4244bec07ea54aaeb507" class="tab" ><label for="20eca481c50c4244bec07ea54aaeb507-81494ddf278f4f7b823cd67e99dd0515" >Startup</label>
+<input type="radio" id="20eca481c50c4244bec07ea54aaeb507-79292b9270e349a4b959c058e5a834c3" name="20eca481c50c4244bec07ea54aaeb507" class="tab" ><label for="20eca481c50c4244bec07ea54aaeb507-79292b9270e349a4b959c058e5a834c3" >Android</label>
+<input type="radio" id="20eca481c50c4244bec07ea54aaeb507-3c8b30bd31954f17a358617d59fb9143" name="20eca481c50c4244bec07ea54aaeb507" class="tab" ><label for="20eca481c50c4244bec07ea54aaeb507-3c8b30bd31954f17a358617d59fb9143" >iOS</label>
+<input type="radio" id="20eca481c50c4244bec07ea54aaeb507-e9ba16a13b7d4f46b335e876b3e0c404" name="20eca481c50c4244bec07ea54aaeb507" class="tab" ><label for="20eca481c50c4244bec07ea54aaeb507-e9ba16a13b7d4f46b335e876b3e0c404" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
