--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -358,7 +358,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -367,11 +367,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="653602df2ea24c0f9c098cc41b7499af-f294e5117b75499bbf5d1d615cc6298f" name="653602df2ea24c0f9c098cc41b7499af" class="tab" checked=""><label for="653602df2ea24c0f9c098cc41b7499af-f294e5117b75499bbf5d1d615cc6298f">General</label>
-<input type="radio" id="653602df2ea24c0f9c098cc41b7499af-bf4325b1b08d480ba47517c760d119c4" name="653602df2ea24c0f9c098cc41b7499af" class="tab"><label for="653602df2ea24c0f9c098cc41b7499af-bf4325b1b08d480ba47517c760d119c4">Startup</label>
-<input type="radio" id="653602df2ea24c0f9c098cc41b7499af-fd4a44e5be9545c49fd8fb636a0e3efb" name="653602df2ea24c0f9c098cc41b7499af" class="tab"><label for="653602df2ea24c0f9c098cc41b7499af-fd4a44e5be9545c49fd8fb636a0e3efb">Android</label>
-<input type="radio" id="653602df2ea24c0f9c098cc41b7499af-e85c1ffd66c84431911ba8e4f138649c" name="653602df2ea24c0f9c098cc41b7499af" class="tab"><label for="653602df2ea24c0f9c098cc41b7499af-e85c1ffd66c84431911ba8e4f138649c">iOS</label>
-<input type="radio" id="653602df2ea24c0f9c098cc41b7499af-b06034d05cf24e1d9517218999d88580" name="653602df2ea24c0f9c098cc41b7499af" class="tab"><label for="653602df2ea24c0f9c098cc41b7499af-b06034d05cf24e1d9517218999d88580">Windows</label>
+<input type="radio" id="6316c9aad29a4a36b14b1b855401e2e6-92320d6fa34b4dc4a206d467b7e6ce4e" name="6316c9aad29a4a36b14b1b855401e2e6" class="tab" checked=""><label for="6316c9aad29a4a36b14b1b855401e2e6-92320d6fa34b4dc4a206d467b7e6ce4e">General</label>
+<input type="radio" id="6316c9aad29a4a36b14b1b855401e2e6-31f7fe8b4c2741899502e71ec8ff3a65" name="6316c9aad29a4a36b14b1b855401e2e6" class="tab"><label for="6316c9aad29a4a36b14b1b855401e2e6-31f7fe8b4c2741899502e71ec8ff3a65">Startup</label>
+<input type="radio" id="6316c9aad29a4a36b14b1b855401e2e6-e93a0b9b7de043f3bef77024b2df5313" name="6316c9aad29a4a36b14b1b855401e2e6" class="tab"><label for="6316c9aad29a4a36b14b1b855401e2e6-e93a0b9b7de043f3bef77024b2df5313">Android</label>
+<input type="radio" id="6316c9aad29a4a36b14b1b855401e2e6-9d4d76db84fd4bfcb00b24708c3ed1a6" name="6316c9aad29a4a36b14b1b855401e2e6" class="tab"><label for="6316c9aad29a4a36b14b1b855401e2e6-9d4d76db84fd4bfcb00b24708c3ed1a6">iOS</label>
+<input type="radio" id="6316c9aad29a4a36b14b1b855401e2e6-4d5b3c50d77c47668e700e883990cb6e" name="6316c9aad29a4a36b14b1b855401e2e6" class="tab"><label for="6316c9aad29a4a36b14b1b855401e2e6-4d5b3c50d77c47668e700e883990cb6e">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -453,11 +453,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="6cb6f2d39df74e979126c66394c56d99-3de38cd893564c7a91aa75e8e5ea3925" name="6cb6f2d39df74e979126c66394c56d99" class="tab" checked=""><label for="6cb6f2d39df74e979126c66394c56d99-3de38cd893564c7a91aa75e8e5ea3925">General</label>
-<input type="radio" id="6cb6f2d39df74e979126c66394c56d99-4644770cb78f4b959117f650d932503b" name="6cb6f2d39df74e979126c66394c56d99" class="tab"><label for="6cb6f2d39df74e979126c66394c56d99-4644770cb78f4b959117f650d932503b">Startup</label>
-<input type="radio" id="6cb6f2d39df74e979126c66394c56d99-09838ef346a94adca1e9c2661accfcab" name="6cb6f2d39df74e979126c66394c56d99" class="tab"><label for="6cb6f2d39df74e979126c66394c56d99-09838ef346a94adca1e9c2661accfcab">Android</label>
-<input type="radio" id="6cb6f2d39df74e979126c66394c56d99-e4ff70408fe04fb09bfc4fcd0f5c765b" name="6cb6f2d39df74e979126c66394c56d99" class="tab"><label for="6cb6f2d39df74e979126c66394c56d99-e4ff70408fe04fb09bfc4fcd0f5c765b">iOS</label>
-<input type="radio" id="6cb6f2d39df74e979126c66394c56d99-e09d73b622f048f38f9e1b03aa6173dc" name="6cb6f2d39df74e979126c66394c56d99" class="tab"><label for="6cb6f2d39df74e979126c66394c56d99-e09d73b622f048f38f9e1b03aa6173dc">Windows</label>
+<input type="radio" id="8f3d3222ba3847b987041af8146d5f34-258bb46120e34d9aaf5dc7a50ab979e0" name="8f3d3222ba3847b987041af8146d5f34" class="tab" checked=""><label for="8f3d3222ba3847b987041af8146d5f34-258bb46120e34d9aaf5dc7a50ab979e0">General</label>
+<input type="radio" id="8f3d3222ba3847b987041af8146d5f34-3379fbc472d64f31b33436673fb235a5" name="8f3d3222ba3847b987041af8146d5f34" class="tab"><label for="8f3d3222ba3847b987041af8146d5f34-3379fbc472d64f31b33436673fb235a5">Startup</label>
+<input type="radio" id="8f3d3222ba3847b987041af8146d5f34-269eeb5d7c0443a2971fc269d92a764d" name="8f3d3222ba3847b987041af8146d5f34" class="tab"><label for="8f3d3222ba3847b987041af8146d5f34-269eeb5d7c0443a2971fc269d92a764d">Android</label>
+<input type="radio" id="8f3d3222ba3847b987041af8146d5f34-0b5c7de0b359491dada0b70c26859122" name="8f3d3222ba3847b987041af8146d5f34" class="tab"><label for="8f3d3222ba3847b987041af8146d5f34-0b5c7de0b359491dada0b70c26859122">iOS</label>
+<input type="radio" id="8f3d3222ba3847b987041af8146d5f34-72469dedb1634f80bbb38d478d046f95" name="8f3d3222ba3847b987041af8146d5f34" class="tab"><label for="8f3d3222ba3847b987041af8146d5f34-72469dedb1634f80bbb38d478d046f95">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
