--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="75f257bfd1de45a88a6b9c4283e93746-92fffc883e3340b586bcffea18bb88d4" name="75f257bfd1de45a88a6b9c4283e93746" class="tab" checked><label for="75f257bfd1de45a88a6b9c4283e93746-92fffc883e3340b586bcffea18bb88d4" >General</label>
-<input type="radio" id="75f257bfd1de45a88a6b9c4283e93746-64848d6cd7a0483cbe565cef1dd2c5b1" name="75f257bfd1de45a88a6b9c4283e93746" class="tab" ><label for="75f257bfd1de45a88a6b9c4283e93746-64848d6cd7a0483cbe565cef1dd2c5b1" >Startup</label>
-<input type="radio" id="75f257bfd1de45a88a6b9c4283e93746-466a8933b9e64296a2d01ff6a2607f62" name="75f257bfd1de45a88a6b9c4283e93746" class="tab" ><label for="75f257bfd1de45a88a6b9c4283e93746-466a8933b9e64296a2d01ff6a2607f62" >Android</label>
-<input type="radio" id="75f257bfd1de45a88a6b9c4283e93746-73a6076698554ac682144658fce2e740" name="75f257bfd1de45a88a6b9c4283e93746" class="tab" ><label for="75f257bfd1de45a88a6b9c4283e93746-73a6076698554ac682144658fce2e740" >iOS</label>
-<input type="radio" id="75f257bfd1de45a88a6b9c4283e93746-6fa1685d1e4b4f3f86ef186617651726" name="75f257bfd1de45a88a6b9c4283e93746" class="tab" ><label for="75f257bfd1de45a88a6b9c4283e93746-6fa1685d1e4b4f3f86ef186617651726" >Windows</label>
+<input type="radio" id="4155d5c6881e46be83e66fd9f0299aa7-d366ad74a84947a19fdb32a364459db2" name="4155d5c6881e46be83e66fd9f0299aa7" class="tab" checked><label for="4155d5c6881e46be83e66fd9f0299aa7-d366ad74a84947a19fdb32a364459db2" >General</label>
+<input type="radio" id="4155d5c6881e46be83e66fd9f0299aa7-bc655fe583f54cf59c793f2ca86e45e2" name="4155d5c6881e46be83e66fd9f0299aa7" class="tab" ><label for="4155d5c6881e46be83e66fd9f0299aa7-bc655fe583f54cf59c793f2ca86e45e2" >Startup</label>
+<input type="radio" id="4155d5c6881e46be83e66fd9f0299aa7-fa8e886dc9404316bfe09b61b4513bfd" name="4155d5c6881e46be83e66fd9f0299aa7" class="tab" ><label for="4155d5c6881e46be83e66fd9f0299aa7-fa8e886dc9404316bfe09b61b4513bfd" >Android</label>
+<input type="radio" id="4155d5c6881e46be83e66fd9f0299aa7-e0b21f60d4194dba9428c1fb5cc3ad91" name="4155d5c6881e46be83e66fd9f0299aa7" class="tab" ><label for="4155d5c6881e46be83e66fd9f0299aa7-e0b21f60d4194dba9428c1fb5cc3ad91" >iOS</label>
+<input type="radio" id="4155d5c6881e46be83e66fd9f0299aa7-f7fa74a0af29477b9e5ddf71ee62b625" name="4155d5c6881e46be83e66fd9f0299aa7" class="tab" ><label for="4155d5c6881e46be83e66fd9f0299aa7-f7fa74a0af29477b9e5ddf71ee62b625" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
