--- a/locations/gps.html
+++ b/locations/gps.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -370,11 +370,11 @@
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="9aee61a2138f4b80be6c956d742f0ab0-9403294806784242bca2472ff92d4176" name="9aee61a2138f4b80be6c956d742f0ab0" class="tab" checked><label for="9aee61a2138f4b80be6c956d742f0ab0-9403294806784242bca2472ff92d4176" >General</label>
-<input type="radio" id="9aee61a2138f4b80be6c956d742f0ab0-856cc501da594b9ebe41c747a80c9f7a" name="9aee61a2138f4b80be6c956d742f0ab0" class="tab" ><label for="9aee61a2138f4b80be6c956d742f0ab0-856cc501da594b9ebe41c747a80c9f7a" >Startup</label>
-<input type="radio" id="9aee61a2138f4b80be6c956d742f0ab0-0a11257b02bc4002a3c4a26aa015b86c" name="9aee61a2138f4b80be6c956d742f0ab0" class="tab" ><label for="9aee61a2138f4b80be6c956d742f0ab0-0a11257b02bc4002a3c4a26aa015b86c" >Android</label>
-<input type="radio" id="9aee61a2138f4b80be6c956d742f0ab0-5fb11a9b16e84d6da4069ed1670ba01a" name="9aee61a2138f4b80be6c956d742f0ab0" class="tab" ><label for="9aee61a2138f4b80be6c956d742f0ab0-5fb11a9b16e84d6da4069ed1670ba01a" >iOS</label>
-<input type="radio" id="9aee61a2138f4b80be6c956d742f0ab0-d80434baeb1d480e963104f6603b746f" name="9aee61a2138f4b80be6c956d742f0ab0" class="tab" ><label for="9aee61a2138f4b80be6c956d742f0ab0-d80434baeb1d480e963104f6603b746f" >Windows</label>
+<input type="radio" id="d342f025c9fc46c1ab5c2e41893162d5-f030f186ab654eafbdd8592eaee1bb36" name="d342f025c9fc46c1ab5c2e41893162d5" class="tab" checked><label for="d342f025c9fc46c1ab5c2e41893162d5-f030f186ab654eafbdd8592eaee1bb36" >General</label>
+<input type="radio" id="d342f025c9fc46c1ab5c2e41893162d5-330b52861bcd4850811cf1306cf828da" name="d342f025c9fc46c1ab5c2e41893162d5" class="tab" ><label for="d342f025c9fc46c1ab5c2e41893162d5-330b52861bcd4850811cf1306cf828da" >Startup</label>
+<input type="radio" id="d342f025c9fc46c1ab5c2e41893162d5-b8666c0ef9eb4593a65f5a649eb0fdd1" name="d342f025c9fc46c1ab5c2e41893162d5" class="tab" ><label for="d342f025c9fc46c1ab5c2e41893162d5-b8666c0ef9eb4593a65f5a649eb0fdd1" >Android</label>
+<input type="radio" id="d342f025c9fc46c1ab5c2e41893162d5-e430fe1442f84af5b5b1d160eba63aff" name="d342f025c9fc46c1ab5c2e41893162d5" class="tab" ><label for="d342f025c9fc46c1ab5c2e41893162d5-e430fe1442f84af5b5b1d160eba63aff" >iOS</label>
+<input type="radio" id="d342f025c9fc46c1ab5c2e41893162d5-1e60eece0c0f4ff89557a89c6b1381ec" name="d342f025c9fc46c1ab5c2e41893162d5" class="tab" ><label for="d342f025c9fc46c1ab5c2e41893162d5-1e60eece0c0f4ff89557a89c6b1381ec" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
