--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -378,10 +378,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="b033797b49474760b4f71c8a5f221fb0-570e40e092c842148e44482a1276bb26" name="b033797b49474760b4f71c8a5f221fb0" class="tab" checked><label for="b033797b49474760b4f71c8a5f221fb0-570e40e092c842148e44482a1276bb26" >General</label>
-<input type="radio" id="b033797b49474760b4f71c8a5f221fb0-7fde17ba17b94d479ccd8806882eed0b" name="b033797b49474760b4f71c8a5f221fb0" class="tab" ><label for="b033797b49474760b4f71c8a5f221fb0-7fde17ba17b94d479ccd8806882eed0b" >Startup</label>
-<input type="radio" id="b033797b49474760b4f71c8a5f221fb0-55d9dd45b1654a1ab6c6e11e0da274c1" name="b033797b49474760b4f71c8a5f221fb0" class="tab" ><label for="b033797b49474760b4f71c8a5f221fb0-55d9dd45b1654a1ab6c6e11e0da274c1" >Android</label>
-<input type="radio" id="b033797b49474760b4f71c8a5f221fb0-57e48225a1a446b8b7a66902cc734787" name="b033797b49474760b4f71c8a5f221fb0" class="tab" ><label for="b033797b49474760b4f71c8a5f221fb0-57e48225a1a446b8b7a66902cc734787" >iOS</label>
+<input type="radio" id="95ce2e2190af4c71a96883fa61e0c458-e3fff51b3ead4d43bbeb5a0064423555" name="95ce2e2190af4c71a96883fa61e0c458" class="tab" checked><label for="95ce2e2190af4c71a96883fa61e0c458-e3fff51b3ead4d43bbeb5a0064423555" >General</label>
+<input type="radio" id="95ce2e2190af4c71a96883fa61e0c458-3d97f7df7514423da4c2ef4b9a3ebef6" name="95ce2e2190af4c71a96883fa61e0c458" class="tab" ><label for="95ce2e2190af4c71a96883fa61e0c458-3d97f7df7514423da4c2ef4b9a3ebef6" >Startup</label>
+<input type="radio" id="95ce2e2190af4c71a96883fa61e0c458-e6945c1e1a4140639df602eec8c59fff" name="95ce2e2190af4c71a96883fa61e0c458" class="tab" ><label for="95ce2e2190af4c71a96883fa61e0c458-e6945c1e1a4140639df602eec8c59fff" >Android</label>
+<input type="radio" id="95ce2e2190af4c71a96883fa61e0c458-1548a1a201074a8e9b9cb49ed4ceefd9" name="95ce2e2190af4c71a96883fa61e0c458" class="tab" ><label for="95ce2e2190af4c71a96883fa61e0c458-1548a1a201074a8e9b9cb49ed4ceefd9" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
