--- a/push/azure.html
+++ b/push/azure.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c108f2dcd9404b22bcfb7300266d6cc2-fa259a66e5074305a2ecf263c84c98d4" name="c108f2dcd9404b22bcfb7300266d6cc2" class="tab" checked><label for="c108f2dcd9404b22bcfb7300266d6cc2-fa259a66e5074305a2ecf263c84c98d4" >General</label>
-<input type="radio" id="c108f2dcd9404b22bcfb7300266d6cc2-018d7deab4c0495aa10931f91e471075" name="c108f2dcd9404b22bcfb7300266d6cc2" class="tab" ><label for="c108f2dcd9404b22bcfb7300266d6cc2-018d7deab4c0495aa10931f91e471075" >Startup</label>
-<input type="radio" id="c108f2dcd9404b22bcfb7300266d6cc2-a5ce4e09bf6541f38bcb4ccea99ff074" name="c108f2dcd9404b22bcfb7300266d6cc2" class="tab" ><label for="c108f2dcd9404b22bcfb7300266d6cc2-a5ce4e09bf6541f38bcb4ccea99ff074" >Android</label>
-<input type="radio" id="c108f2dcd9404b22bcfb7300266d6cc2-10a7739fec824e52a17f74fb03a0aa0a" name="c108f2dcd9404b22bcfb7300266d6cc2" class="tab" ><label for="c108f2dcd9404b22bcfb7300266d6cc2-10a7739fec824e52a17f74fb03a0aa0a" >iOS</label>
-<input type="radio" id="c108f2dcd9404b22bcfb7300266d6cc2-16d44a0d892a420ab894d56e3688da61" name="c108f2dcd9404b22bcfb7300266d6cc2" class="tab" ><label for="c108f2dcd9404b22bcfb7300266d6cc2-16d44a0d892a420ab894d56e3688da61" >Windows</label>
+<input type="radio" id="0e7d1a1a7e11422a8ac28dc73586bcf3-541b4158cd5d46e5854a74a9b8dca9c9" name="0e7d1a1a7e11422a8ac28dc73586bcf3" class="tab" checked><label for="0e7d1a1a7e11422a8ac28dc73586bcf3-541b4158cd5d46e5854a74a9b8dca9c9" >General</label>
+<input type="radio" id="0e7d1a1a7e11422a8ac28dc73586bcf3-2fd426d47d3446eab9172748dbf06531" name="0e7d1a1a7e11422a8ac28dc73586bcf3" class="tab" ><label for="0e7d1a1a7e11422a8ac28dc73586bcf3-2fd426d47d3446eab9172748dbf06531" >Startup</label>
+<input type="radio" id="0e7d1a1a7e11422a8ac28dc73586bcf3-525f30466dac48b8bfee83d5cf290a35" name="0e7d1a1a7e11422a8ac28dc73586bcf3" class="tab" ><label for="0e7d1a1a7e11422a8ac28dc73586bcf3-525f30466dac48b8bfee83d5cf290a35" >Android</label>
+<input type="radio" id="0e7d1a1a7e11422a8ac28dc73586bcf3-e21c24ae65be4ee9b33ca64932858377" name="0e7d1a1a7e11422a8ac28dc73586bcf3" class="tab" ><label for="0e7d1a1a7e11422a8ac28dc73586bcf3-e21c24ae65be4ee9b33ca64932858377" >iOS</label>
+<input type="radio" id="0e7d1a1a7e11422a8ac28dc73586bcf3-444e665f756c44b58f57fce07ef3a1b9" name="0e7d1a1a7e11422a8ac28dc73586bcf3" class="tab" ><label for="0e7d1a1a7e11422a8ac28dc73586bcf3-444e665f756c44b58f57fce07ef3a1b9" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
