--- a/push/firebase.html
+++ b/push/firebase.html
@@ -358,7 +358,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -367,10 +367,10 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="94c6d37ac7414ac4a59c0af1adfe6cad-cb6f63ef5003478da151a49b3c5ab365" name="94c6d37ac7414ac4a59c0af1adfe6cad" class="tab" checked=""><label for="94c6d37ac7414ac4a59c0af1adfe6cad-cb6f63ef5003478da151a49b3c5ab365">General</label>
-<input type="radio" id="94c6d37ac7414ac4a59c0af1adfe6cad-c7e5e24fac7f4f7fbd412947e3a02c95" name="94c6d37ac7414ac4a59c0af1adfe6cad" class="tab"><label for="94c6d37ac7414ac4a59c0af1adfe6cad-c7e5e24fac7f4f7fbd412947e3a02c95">Startup</label>
-<input type="radio" id="94c6d37ac7414ac4a59c0af1adfe6cad-6b860fca5fe747f0a2ca876b36a3cc3e" name="94c6d37ac7414ac4a59c0af1adfe6cad" class="tab"><label for="94c6d37ac7414ac4a59c0af1adfe6cad-6b860fca5fe747f0a2ca876b36a3cc3e">Android</label>
-<input type="radio" id="94c6d37ac7414ac4a59c0af1adfe6cad-eadbcfdfc42747c693096e5f1056692b" name="94c6d37ac7414ac4a59c0af1adfe6cad" class="tab"><label for="94c6d37ac7414ac4a59c0af1adfe6cad-eadbcfdfc42747c693096e5f1056692b">iOS</label>
+<input type="radio" id="36a126733fea478b8549fa7f126d525e-b6e17ed7550245d59a3a19aedce87289" name="36a126733fea478b8549fa7f126d525e" class="tab" checked=""><label for="36a126733fea478b8549fa7f126d525e-b6e17ed7550245d59a3a19aedce87289">General</label>
+<input type="radio" id="36a126733fea478b8549fa7f126d525e-e6465655568f4839af7cb38234b2cf4e" name="36a126733fea478b8549fa7f126d525e" class="tab"><label for="36a126733fea478b8549fa7f126d525e-e6465655568f4839af7cb38234b2cf4e">Startup</label>
+<input type="radio" id="36a126733fea478b8549fa7f126d525e-185eef60946c4706879ad300a9b376cd" name="36a126733fea478b8549fa7f126d525e" class="tab"><label for="36a126733fea478b8549fa7f126d525e-185eef60946c4706879ad300a9b376cd">Android</label>
+<input type="radio" id="36a126733fea478b8549fa7f126d525e-e9054b6173de4146a5d5a4c5109e2ab0" name="36a126733fea478b8549fa7f126d525e" class="tab"><label for="36a126733fea478b8549fa7f126d525e-e9054b6173de4146a5d5a4c5109e2ab0">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
