--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,10 +369,10 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e409628b88a64ee781945e403b631fc7-957cd2f358a946579a753f2a7b11a26b" name="e409628b88a64ee781945e403b631fc7" class="tab" checked><label for="e409628b88a64ee781945e403b631fc7-957cd2f358a946579a753f2a7b11a26b" >General</label>
-<input type="radio" id="e409628b88a64ee781945e403b631fc7-7b69171423304017b7018a68e5340880" name="e409628b88a64ee781945e403b631fc7" class="tab" ><label for="e409628b88a64ee781945e403b631fc7-7b69171423304017b7018a68e5340880" >Startup</label>
-<input type="radio" id="e409628b88a64ee781945e403b631fc7-68954668a41b48caa3905b9b0b5c546c" name="e409628b88a64ee781945e403b631fc7" class="tab" ><label for="e409628b88a64ee781945e403b631fc7-68954668a41b48caa3905b9b0b5c546c" >Android</label>
-<input type="radio" id="e409628b88a64ee781945e403b631fc7-c64a6027b38048389a8a919ca0087065" name="e409628b88a64ee781945e403b631fc7" class="tab" ><label for="e409628b88a64ee781945e403b631fc7-c64a6027b38048389a8a919ca0087065" >iOS</label>
+<input type="radio" id="31e8479e2bef401685ab994fd1ab89e8-1103d6f283a2492cbfb6707021f3251e" name="31e8479e2bef401685ab994fd1ab89e8" class="tab" checked><label for="31e8479e2bef401685ab994fd1ab89e8-1103d6f283a2492cbfb6707021f3251e" >General</label>
+<input type="radio" id="31e8479e2bef401685ab994fd1ab89e8-e39b00fb84ee4854b39a5c9e8be07f85" name="31e8479e2bef401685ab994fd1ab89e8" class="tab" ><label for="31e8479e2bef401685ab994fd1ab89e8-e39b00fb84ee4854b39a5c9e8be07f85" >Startup</label>
+<input type="radio" id="31e8479e2bef401685ab994fd1ab89e8-e743a429ba374aea8888f4c92a3cfc2e" name="31e8479e2bef401685ab994fd1ab89e8" class="tab" ><label for="31e8479e2bef401685ab994fd1ab89e8-e743a429ba374aea8888f4c92a3cfc2e" >Android</label>
+<input type="radio" id="31e8479e2bef401685ab994fd1ab89e8-afeefd02dae048adbe88e57e6f1fe25c" name="31e8479e2bef401685ab994fd1ab89e8" class="tab" ><label for="31e8479e2bef401685ab994fd1ab89e8-afeefd02dae048adbe88e57e6f1fe25c" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
