--- a/release-notes/nextrelease.html
+++ b/release-notes/nextrelease.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
