--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="4133e9be4e8b44169b2481cf7ae34059-244288e7d456478d969766feb40fa2c4" name="4133e9be4e8b44169b2481cf7ae34059" class="tab" checked><label for="4133e9be4e8b44169b2481cf7ae34059-244288e7d456478d969766feb40fa2c4" >General</label>
-<input type="radio" id="4133e9be4e8b44169b2481cf7ae34059-07b69d6e5428498a91d504268158f7b1" name="4133e9be4e8b44169b2481cf7ae34059" class="tab" ><label for="4133e9be4e8b44169b2481cf7ae34059-07b69d6e5428498a91d504268158f7b1" >Startup</label>
-<input type="radio" id="4133e9be4e8b44169b2481cf7ae34059-91ff672d6b934d10bb4e05770334c76f" name="4133e9be4e8b44169b2481cf7ae34059" class="tab" ><label for="4133e9be4e8b44169b2481cf7ae34059-91ff672d6b934d10bb4e05770334c76f" >Android</label>
-<input type="radio" id="4133e9be4e8b44169b2481cf7ae34059-64ef5b162d9d498aa347e8367d75fe9a" name="4133e9be4e8b44169b2481cf7ae34059" class="tab" ><label for="4133e9be4e8b44169b2481cf7ae34059-64ef5b162d9d498aa347e8367d75fe9a" >iOS</label>
-<input type="radio" id="4133e9be4e8b44169b2481cf7ae34059-250d3301c91e47d68c1be4480446af33" name="4133e9be4e8b44169b2481cf7ae34059" class="tab" ><label for="4133e9be4e8b44169b2481cf7ae34059-250d3301c91e47d68c1be4480446af33" >Windows</label>
+<input type="radio" id="d67cef0def594bcf89b6d5ddbebe6d1e-f11b49cf02204665bc91d56911902f0b" name="d67cef0def594bcf89b6d5ddbebe6d1e" class="tab" checked><label for="d67cef0def594bcf89b6d5ddbebe6d1e-f11b49cf02204665bc91d56911902f0b" >General</label>
+<input type="radio" id="d67cef0def594bcf89b6d5ddbebe6d1e-d6d79be1fa934621a4f2e10ca539369c" name="d67cef0def594bcf89b6d5ddbebe6d1e" class="tab" ><label for="d67cef0def594bcf89b6d5ddbebe6d1e-d6d79be1fa934621a4f2e10ca539369c" >Startup</label>
+<input type="radio" id="d67cef0def594bcf89b6d5ddbebe6d1e-e117f01b67554601af213e1c2d59804f" name="d67cef0def594bcf89b6d5ddbebe6d1e" class="tab" ><label for="d67cef0def594bcf89b6d5ddbebe6d1e-e117f01b67554601af213e1c2d59804f" >Android</label>
+<input type="radio" id="d67cef0def594bcf89b6d5ddbebe6d1e-7817af9313e5479cb561fce3274ca806" name="d67cef0def594bcf89b6d5ddbebe6d1e" class="tab" ><label for="d67cef0def594bcf89b6d5ddbebe6d1e-7817af9313e5479cb561fce3274ca806" >iOS</label>
+<input type="radio" id="d67cef0def594bcf89b6d5ddbebe6d1e-f6302ad6e839493d9eb5dc286f031896" name="d67cef0def594bcf89b6d5ddbebe6d1e" class="tab" ><label for="d67cef0def594bcf89b6d5ddbebe6d1e-f6302ad6e839493d9eb5dc286f031896" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
