--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7d995c65415d4866be01d80647a761e5-31bca3eeebbd4bb296ffb57a369eceed" name="7d995c65415d4866be01d80647a761e5" class="tab" checked><label for="7d995c65415d4866be01d80647a761e5-31bca3eeebbd4bb296ffb57a369eceed" >General</label>
-<input type="radio" id="7d995c65415d4866be01d80647a761e5-0f15152637a24d52ae0e39560d8e9082" name="7d995c65415d4866be01d80647a761e5" class="tab" ><label for="7d995c65415d4866be01d80647a761e5-0f15152637a24d52ae0e39560d8e9082" >Startup</label>
-<input type="radio" id="7d995c65415d4866be01d80647a761e5-f05ff61ffd10463699eff8dd33798b44" name="7d995c65415d4866be01d80647a761e5" class="tab" ><label for="7d995c65415d4866be01d80647a761e5-f05ff61ffd10463699eff8dd33798b44" >Android</label>
-<input type="radio" id="7d995c65415d4866be01d80647a761e5-ca174881f5cc4587bf5156f96c8adb5c" name="7d995c65415d4866be01d80647a761e5" class="tab" ><label for="7d995c65415d4866be01d80647a761e5-ca174881f5cc4587bf5156f96c8adb5c" >iOS</label>
-<input type="radio" id="7d995c65415d4866be01d80647a761e5-601787d4ad504abd8edfee3a4fde0540" name="7d995c65415d4866be01d80647a761e5" class="tab" ><label for="7d995c65415d4866be01d80647a761e5-601787d4ad504abd8edfee3a4fde0540" >Windows</label>
+<input type="radio" id="c38eff4447b44deb8c8a58c33c9e546f-9bfd9caa722443e59365b5b5abab194a" name="c38eff4447b44deb8c8a58c33c9e546f" class="tab" checked><label for="c38eff4447b44deb8c8a58c33c9e546f-9bfd9caa722443e59365b5b5abab194a" >General</label>
+<input type="radio" id="c38eff4447b44deb8c8a58c33c9e546f-e42d869917ea437ba3541417b20e1d11" name="c38eff4447b44deb8c8a58c33c9e546f" class="tab" ><label for="c38eff4447b44deb8c8a58c33c9e546f-e42d869917ea437ba3541417b20e1d11" >Startup</label>
+<input type="radio" id="c38eff4447b44deb8c8a58c33c9e546f-72a51c991e1742f6a595055b3ffc845c" name="c38eff4447b44deb8c8a58c33c9e546f" class="tab" ><label for="c38eff4447b44deb8c8a58c33c9e546f-72a51c991e1742f6a595055b3ffc845c" >Android</label>
+<input type="radio" id="c38eff4447b44deb8c8a58c33c9e546f-6292dba7701c441c91cfcc4404344402" name="c38eff4447b44deb8c8a58c33c9e546f" class="tab" ><label for="c38eff4447b44deb8c8a58c33c9e546f-6292dba7701c441c91cfcc4404344402" >iOS</label>
+<input type="radio" id="c38eff4447b44deb8c8a58c33c9e546f-1407490ab2cd4a9c9947041db2f3e9ee" name="c38eff4447b44deb8c8a58c33c9e546f" class="tab" ><label for="c38eff4447b44deb8c8a58c33c9e546f-1407490ab2cd4a9c9947041db2f3e9ee" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
