--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="7e6a39c56f57496e955ea1c136626c88-6717ac6c0e3d4202b34861d2f4dcdff5" name="7e6a39c56f57496e955ea1c136626c88" class="tab" checked><label for="7e6a39c56f57496e955ea1c136626c88-6717ac6c0e3d4202b34861d2f4dcdff5" >General</label>
-<input type="radio" id="7e6a39c56f57496e955ea1c136626c88-06491ce9b3d64feda3a628443e0f5f93" name="7e6a39c56f57496e955ea1c136626c88" class="tab" ><label for="7e6a39c56f57496e955ea1c136626c88-06491ce9b3d64feda3a628443e0f5f93" >Startup</label>
-<input type="radio" id="7e6a39c56f57496e955ea1c136626c88-f197ea564de1408aa4ffb0ba8062988c" name="7e6a39c56f57496e955ea1c136626c88" class="tab" ><label for="7e6a39c56f57496e955ea1c136626c88-f197ea564de1408aa4ffb0ba8062988c" >Android</label>
-<input type="radio" id="7e6a39c56f57496e955ea1c136626c88-b23465a5af74424cb0a5f534bda134cc" name="7e6a39c56f57496e955ea1c136626c88" class="tab" ><label for="7e6a39c56f57496e955ea1c136626c88-b23465a5af74424cb0a5f534bda134cc" >iOS</label>
-<input type="radio" id="7e6a39c56f57496e955ea1c136626c88-ea7a82c1a75044098feca1806bf95c29" name="7e6a39c56f57496e955ea1c136626c88" class="tab" ><label for="7e6a39c56f57496e955ea1c136626c88-ea7a82c1a75044098feca1806bf95c29" >Windows</label>
+<input type="radio" id="03ae05bb261c4b9193d54ce0d7209b38-b93c44fc5e404c148efc574c255f0583" name="03ae05bb261c4b9193d54ce0d7209b38" class="tab" checked><label for="03ae05bb261c4b9193d54ce0d7209b38-b93c44fc5e404c148efc574c255f0583" >General</label>
+<input type="radio" id="03ae05bb261c4b9193d54ce0d7209b38-a2f45aa7dccd4681bfc91261ad5a99e8" name="03ae05bb261c4b9193d54ce0d7209b38" class="tab" ><label for="03ae05bb261c4b9193d54ce0d7209b38-a2f45aa7dccd4681bfc91261ad5a99e8" >Startup</label>
+<input type="radio" id="03ae05bb261c4b9193d54ce0d7209b38-aea9c7fecb7740bbb0370aa7cc13f189" name="03ae05bb261c4b9193d54ce0d7209b38" class="tab" ><label for="03ae05bb261c4b9193d54ce0d7209b38-aea9c7fecb7740bbb0370aa7cc13f189" >Android</label>
+<input type="radio" id="03ae05bb261c4b9193d54ce0d7209b38-d8494854f94d4372a4e531d953701d48" name="03ae05bb261c4b9193d54ce0d7209b38" class="tab" ><label for="03ae05bb261c4b9193d54ce0d7209b38-d8494854f94d4372a4e531d953701d48" >iOS</label>
+<input type="radio" id="03ae05bb261c4b9193d54ce0d7209b38-31670651fdda4cb7a2889981575f43ef" name="03ae05bb261c4b9193d54ce0d7209b38" class="tab" ><label for="03ae05bb261c4b9193d54ce0d7209b38-31670651fdda4cb7a2889981575f43ef" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
