--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="666d3636b6bd4b51a786bcf9aa2d2107-8977bf2cb2a849be8674ec4333350c90" name="666d3636b6bd4b51a786bcf9aa2d2107" class="tab" checked><label for="666d3636b6bd4b51a786bcf9aa2d2107-8977bf2cb2a849be8674ec4333350c90" >General</label>
-<input type="radio" id="666d3636b6bd4b51a786bcf9aa2d2107-5ca9a293f9e341b588820e52ebd15ac5" name="666d3636b6bd4b51a786bcf9aa2d2107" class="tab" ><label for="666d3636b6bd4b51a786bcf9aa2d2107-5ca9a293f9e341b588820e52ebd15ac5" >Startup</label>
-<input type="radio" id="666d3636b6bd4b51a786bcf9aa2d2107-2cf3cbf1b85343c2b93bfd303e26ba7a" name="666d3636b6bd4b51a786bcf9aa2d2107" class="tab" ><label for="666d3636b6bd4b51a786bcf9aa2d2107-2cf3cbf1b85343c2b93bfd303e26ba7a" >Android</label>
-<input type="radio" id="666d3636b6bd4b51a786bcf9aa2d2107-6c4e8327f82046e3b9f747e6273c4f64" name="666d3636b6bd4b51a786bcf9aa2d2107" class="tab" ><label for="666d3636b6bd4b51a786bcf9aa2d2107-6c4e8327f82046e3b9f747e6273c4f64" >iOS</label>
-<input type="radio" id="666d3636b6bd4b51a786bcf9aa2d2107-8ea0f682e29249e2b620161acc9e1057" name="666d3636b6bd4b51a786bcf9aa2d2107" class="tab" ><label for="666d3636b6bd4b51a786bcf9aa2d2107-8ea0f682e29249e2b620161acc9e1057" >Windows</label>
+<input type="radio" id="077b1f0aa27441d3aead3f02fb66facf-28b80bbdada14c699e73f96ce4ed91ee" name="077b1f0aa27441d3aead3f02fb66facf" class="tab" checked><label for="077b1f0aa27441d3aead3f02fb66facf-28b80bbdada14c699e73f96ce4ed91ee" >General</label>
+<input type="radio" id="077b1f0aa27441d3aead3f02fb66facf-ad4dfcf934854217bc292f5170518c24" name="077b1f0aa27441d3aead3f02fb66facf" class="tab" ><label for="077b1f0aa27441d3aead3f02fb66facf-ad4dfcf934854217bc292f5170518c24" >Startup</label>
+<input type="radio" id="077b1f0aa27441d3aead3f02fb66facf-72ee37e12781447ab365633697b44799" name="077b1f0aa27441d3aead3f02fb66facf" class="tab" ><label for="077b1f0aa27441d3aead3f02fb66facf-72ee37e12781447ab365633697b44799" >Android</label>
+<input type="radio" id="077b1f0aa27441d3aead3f02fb66facf-2491bd4329e94223b72796f6019e4b6f" name="077b1f0aa27441d3aead3f02fb66facf" class="tab" ><label for="077b1f0aa27441d3aead3f02fb66facf-2491bd4329e94223b72796f6019e4b6f" >iOS</label>
+<input type="radio" id="077b1f0aa27441d3aead3f02fb66facf-f5fc312de34642a8b1f8d7cca4a126cf" name="077b1f0aa27441d3aead3f02fb66facf" class="tab" ><label for="077b1f0aa27441d3aead3f02fb66facf-f5fc312de34642a8b1f8d7cca4a126cf" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
