--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,9 +369,9 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="8185f8a9deeb48b8b625da3b36ddf840-9449a21f2e1b439ca31acf646af8c587" name="8185f8a9deeb48b8b625da3b36ddf840" class="tab" checked><label for="8185f8a9deeb48b8b625da3b36ddf840-9449a21f2e1b439ca31acf646af8c587" >General</label>
-<input type="radio" id="8185f8a9deeb48b8b625da3b36ddf840-3f47877cf4de4e7d8c1d66986bef0d3f" name="8185f8a9deeb48b8b625da3b36ddf840" class="tab" ><label for="8185f8a9deeb48b8b625da3b36ddf840-3f47877cf4de4e7d8c1d66986bef0d3f" >Startup</label>
-<input type="radio" id="8185f8a9deeb48b8b625da3b36ddf840-95ddd07f8e5d40ce82fe478396295a75" name="8185f8a9deeb48b8b625da3b36ddf840" class="tab" ><label for="8185f8a9deeb48b8b625da3b36ddf840-95ddd07f8e5d40ce82fe478396295a75" >Android</label>
+<input type="radio" id="f6ad48a1ad8642dc868f94f35faf1b63-04cd81dc84344966ba44e6b2c9c921a6" name="f6ad48a1ad8642dc868f94f35faf1b63" class="tab" checked><label for="f6ad48a1ad8642dc868f94f35faf1b63-04cd81dc84344966ba44e6b2c9c921a6" >General</label>
+<input type="radio" id="f6ad48a1ad8642dc868f94f35faf1b63-02eef4a0e7f14448970ed00f97052781" name="f6ad48a1ad8642dc868f94f35faf1b63" class="tab" ><label for="f6ad48a1ad8642dc868f94f35faf1b63-02eef4a0e7f14448970ed00f97052781" >Startup</label>
+<input type="radio" id="f6ad48a1ad8642dc868f94f35faf1b63-ecac53b5c1174240ac57494eda33e86c" name="f6ad48a1ad8642dc868f94f35faf1b63" class="tab" ><label for="f6ad48a1ad8642dc868f94f35faf1b63-ecac53b5c1174240ac57494eda33e86c" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
