--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="9915a41925d4457ab65ea5d00e6d05cd-5dacf014cd4c4d9fb2e2e7c2d5eb2eeb" name="9915a41925d4457ab65ea5d00e6d05cd" class="tab" checked><label for="9915a41925d4457ab65ea5d00e6d05cd-5dacf014cd4c4d9fb2e2e7c2d5eb2eeb" >General</label>
-<input type="radio" id="9915a41925d4457ab65ea5d00e6d05cd-e2871591c1e44c949cc9694f204d0033" name="9915a41925d4457ab65ea5d00e6d05cd" class="tab" ><label for="9915a41925d4457ab65ea5d00e6d05cd-e2871591c1e44c949cc9694f204d0033" >Startup</label>
-<input type="radio" id="9915a41925d4457ab65ea5d00e6d05cd-b7648c8ea8854c7da6e91716b53df1d1" name="9915a41925d4457ab65ea5d00e6d05cd" class="tab" ><label for="9915a41925d4457ab65ea5d00e6d05cd-b7648c8ea8854c7da6e91716b53df1d1" >Android</label>
-<input type="radio" id="9915a41925d4457ab65ea5d00e6d05cd-e7b712cbf3664023b3abdf539e276db2" name="9915a41925d4457ab65ea5d00e6d05cd" class="tab" ><label for="9915a41925d4457ab65ea5d00e6d05cd-e7b712cbf3664023b3abdf539e276db2" >iOS</label>
-<input type="radio" id="9915a41925d4457ab65ea5d00e6d05cd-d974eab889594afca911494da5ed31ac" name="9915a41925d4457ab65ea5d00e6d05cd" class="tab" ><label for="9915a41925d4457ab65ea5d00e6d05cd-d974eab889594afca911494da5ed31ac" >Windows</label>
+<input type="radio" id="23af5955b5314abba51c5a9935dfa430-e949b097c9af423b9cb58aaa54c15972" name="23af5955b5314abba51c5a9935dfa430" class="tab" checked><label for="23af5955b5314abba51c5a9935dfa430-e949b097c9af423b9cb58aaa54c15972" >General</label>
+<input type="radio" id="23af5955b5314abba51c5a9935dfa430-9a72464623aa4565932478b371c8f450" name="23af5955b5314abba51c5a9935dfa430" class="tab" ><label for="23af5955b5314abba51c5a9935dfa430-9a72464623aa4565932478b371c8f450" >Startup</label>
+<input type="radio" id="23af5955b5314abba51c5a9935dfa430-6d3eacd08fea4c0891006cf58e593c4a" name="23af5955b5314abba51c5a9935dfa430" class="tab" ><label for="23af5955b5314abba51c5a9935dfa430-6d3eacd08fea4c0891006cf58e593c4a" >Android</label>
+<input type="radio" id="23af5955b5314abba51c5a9935dfa430-7e51e36e1b524c32b9a9c2af55c66435" name="23af5955b5314abba51c5a9935dfa430" class="tab" ><label for="23af5955b5314abba51c5a9935dfa430-7e51e36e1b524c32b9a9c2af55c66435" >iOS</label>
+<input type="radio" id="23af5955b5314abba51c5a9935dfa430-266e6aeb38ac40ad80a46dabf871a351" name="23af5955b5314abba51c5a9935dfa430" class="tab" ><label for="23af5955b5314abba51c5a9935dfa430-266e6aeb38ac40ad80a46dabf871a351" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
