--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,10 +369,10 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="e368451eda094092887f5944be16150f-b8e28654ddfb4ec5944faf120e5657e6" name="e368451eda094092887f5944be16150f" class="tab" checked><label for="e368451eda094092887f5944be16150f-b8e28654ddfb4ec5944faf120e5657e6" >General</label>
-<input type="radio" id="e368451eda094092887f5944be16150f-b58aa9286adf41cabc6355b7aaa82819" name="e368451eda094092887f5944be16150f" class="tab" ><label for="e368451eda094092887f5944be16150f-b58aa9286adf41cabc6355b7aaa82819" >Startup</label>
-<input type="radio" id="e368451eda094092887f5944be16150f-1c09a4e1292c48f584af223c33b6a8ad" name="e368451eda094092887f5944be16150f" class="tab" ><label for="e368451eda094092887f5944be16150f-1c09a4e1292c48f584af223c33b6a8ad" >Android</label>
-<input type="radio" id="e368451eda094092887f5944be16150f-d9400f3b669b460585c91e81b5a59612" name="e368451eda094092887f5944be16150f" class="tab" ><label for="e368451eda094092887f5944be16150f-d9400f3b669b460585c91e81b5a59612" >iOS</label>
+<input type="radio" id="2f9db2c00ad44f028fd2924172c65470-65d05a42e9be4ebf90a22d324a603c9a" name="2f9db2c00ad44f028fd2924172c65470" class="tab" checked><label for="2f9db2c00ad44f028fd2924172c65470-65d05a42e9be4ebf90a22d324a603c9a" >General</label>
+<input type="radio" id="2f9db2c00ad44f028fd2924172c65470-5a8fa503d7aa4cb0be21ab854bf7cc4c" name="2f9db2c00ad44f028fd2924172c65470" class="tab" ><label for="2f9db2c00ad44f028fd2924172c65470-5a8fa503d7aa4cb0be21ab854bf7cc4c" >Startup</label>
+<input type="radio" id="2f9db2c00ad44f028fd2924172c65470-e30733a479354267b282bccb9d8c7d09" name="2f9db2c00ad44f028fd2924172c65470" class="tab" ><label for="2f9db2c00ad44f028fd2924172c65470-e30733a479354267b282bccb9d8c7d09" >Android</label>
+<input type="radio" id="2f9db2c00ad44f028fd2924172c65470-8212a1844dd949bb9daf2093d8a9fd80" name="2f9db2c00ad44f028fd2924172c65470" class="tab" ><label for="2f9db2c00ad44f028fd2924172c65470-8212a1844dd949bb9daf2093d8a9fd80" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
