--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,9 +369,9 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b5b31234903844bfbe40a5302ee27f5e-f8a9b18fdbbc44d18239ea6c5a144f04" name="b5b31234903844bfbe40a5302ee27f5e" class="tab" checked><label for="b5b31234903844bfbe40a5302ee27f5e-f8a9b18fdbbc44d18239ea6c5a144f04" >General</label>
-<input type="radio" id="b5b31234903844bfbe40a5302ee27f5e-446024d07dfc4d339765a6b190da3ce7" name="b5b31234903844bfbe40a5302ee27f5e" class="tab" ><label for="b5b31234903844bfbe40a5302ee27f5e-446024d07dfc4d339765a6b190da3ce7" >Startup</label>
-<input type="radio" id="b5b31234903844bfbe40a5302ee27f5e-882e3aa7565041a7a5b0ada3ba64bbb1" name="b5b31234903844bfbe40a5302ee27f5e" class="tab" ><label for="b5b31234903844bfbe40a5302ee27f5e-882e3aa7565041a7a5b0ada3ba64bbb1" >Android</label>
+<input type="radio" id="94d5214641104222b2fdbab0e10787c8-7eb629dfe8ac468e91dbe8a1c9f6d401" name="94d5214641104222b2fdbab0e10787c8" class="tab" checked><label for="94d5214641104222b2fdbab0e10787c8-7eb629dfe8ac468e91dbe8a1c9f6d401" >General</label>
+<input type="radio" id="94d5214641104222b2fdbab0e10787c8-ea379ef49f614af39ddd7bc1a793a221" name="94d5214641104222b2fdbab0e10787c8" class="tab" ><label for="94d5214641104222b2fdbab0e10787c8-ea379ef49f614af39ddd7bc1a793a221" >Startup</label>
+<input type="radio" id="94d5214641104222b2fdbab0e10787c8-51a6a8deec32468393e71032feccaaf6" name="94d5214641104222b2fdbab0e10787c8" class="tab" ><label for="94d5214641104222b2fdbab0e10787c8-51a6a8deec32468393e71032feccaaf6" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
