--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -375,11 +375,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="32eabc0421d54875b80c7a1177c3273e-e582f26bab7049159002361770cd73a7" name="32eabc0421d54875b80c7a1177c3273e" class="tab" checked><label for="32eabc0421d54875b80c7a1177c3273e-e582f26bab7049159002361770cd73a7" >General</label>
-<input type="radio" id="32eabc0421d54875b80c7a1177c3273e-3e08f72db9cd4f6492034fdb287633f2" name="32eabc0421d54875b80c7a1177c3273e" class="tab" ><label for="32eabc0421d54875b80c7a1177c3273e-3e08f72db9cd4f6492034fdb287633f2" >Startup</label>
-<input type="radio" id="32eabc0421d54875b80c7a1177c3273e-8f8d3d1d2868425ca93cd74e53b5cd9d" name="32eabc0421d54875b80c7a1177c3273e" class="tab" ><label for="32eabc0421d54875b80c7a1177c3273e-8f8d3d1d2868425ca93cd74e53b5cd9d" >Android</label>
-<input type="radio" id="32eabc0421d54875b80c7a1177c3273e-9dc271718c5840a7bebe43c418ec7c25" name="32eabc0421d54875b80c7a1177c3273e" class="tab" ><label for="32eabc0421d54875b80c7a1177c3273e-9dc271718c5840a7bebe43c418ec7c25" >iOS</label>
-<input type="radio" id="32eabc0421d54875b80c7a1177c3273e-ffff636184a24d53b26132c0b65c3b5f" name="32eabc0421d54875b80c7a1177c3273e" class="tab" ><label for="32eabc0421d54875b80c7a1177c3273e-ffff636184a24d53b26132c0b65c3b5f" >Windows</label></li>
+<input type="radio" id="9845520a8bd94b7e8cca79e16df10ab8-be9f0e6618414708885d8094e261da7c" name="9845520a8bd94b7e8cca79e16df10ab8" class="tab" checked><label for="9845520a8bd94b7e8cca79e16df10ab8-be9f0e6618414708885d8094e261da7c" >General</label>
+<input type="radio" id="9845520a8bd94b7e8cca79e16df10ab8-d09c055623ca4c11b8d10efd17731d2a" name="9845520a8bd94b7e8cca79e16df10ab8" class="tab" ><label for="9845520a8bd94b7e8cca79e16df10ab8-d09c055623ca4c11b8d10efd17731d2a" >Startup</label>
+<input type="radio" id="9845520a8bd94b7e8cca79e16df10ab8-64ff7e2bfb81484ab1ed0569a4e661bb" name="9845520a8bd94b7e8cca79e16df10ab8" class="tab" ><label for="9845520a8bd94b7e8cca79e16df10ab8-64ff7e2bfb81484ab1ed0569a4e661bb" >Android</label>
+<input type="radio" id="9845520a8bd94b7e8cca79e16df10ab8-d1f5aae6ed024b3db626c886e2f69716" name="9845520a8bd94b7e8cca79e16df10ab8" class="tab" ><label for="9845520a8bd94b7e8cca79e16df10ab8-d1f5aae6ed024b3db626c886e2f69716" >iOS</label>
+<input type="radio" id="9845520a8bd94b7e8cca79e16df10ab8-a378cc8dd9ef47c98b01ef507588a22a" name="9845520a8bd94b7e8cca79e16df10ab8" class="tab" ><label for="9845520a8bd94b7e8cca79e16df10ab8-a378cc8dd9ef47c98b01ef507588a22a" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
