--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="3b25ffc1fcb54bd8928899838ecd39bf-4947a1c153a54b81a18d9040709dba6d" name="3b25ffc1fcb54bd8928899838ecd39bf" class="tab" checked><label for="3b25ffc1fcb54bd8928899838ecd39bf-4947a1c153a54b81a18d9040709dba6d" >General</label>
-<input type="radio" id="3b25ffc1fcb54bd8928899838ecd39bf-fc62ad15bc4d41fb8322ed3a6dc48418" name="3b25ffc1fcb54bd8928899838ecd39bf" class="tab" ><label for="3b25ffc1fcb54bd8928899838ecd39bf-fc62ad15bc4d41fb8322ed3a6dc48418" >Startup</label>
-<input type="radio" id="3b25ffc1fcb54bd8928899838ecd39bf-64f3300977ab4b1ca8d809b9c4bb6253" name="3b25ffc1fcb54bd8928899838ecd39bf" class="tab" ><label for="3b25ffc1fcb54bd8928899838ecd39bf-64f3300977ab4b1ca8d809b9c4bb6253" >Android</label>
-<input type="radio" id="3b25ffc1fcb54bd8928899838ecd39bf-4199a51a584f47b1bc0ca6d87006033f" name="3b25ffc1fcb54bd8928899838ecd39bf" class="tab" ><label for="3b25ffc1fcb54bd8928899838ecd39bf-4199a51a584f47b1bc0ca6d87006033f" >iOS</label>
-<input type="radio" id="3b25ffc1fcb54bd8928899838ecd39bf-db5efdde6745497b97b87d758d429520" name="3b25ffc1fcb54bd8928899838ecd39bf" class="tab" ><label for="3b25ffc1fcb54bd8928899838ecd39bf-db5efdde6745497b97b87d758d429520" >Windows</label>
+<input type="radio" id="98a0898dd370483faaa45fa57e8cb707-6105324fa1114911a7d6b8d1425dbecc" name="98a0898dd370483faaa45fa57e8cb707" class="tab" checked><label for="98a0898dd370483faaa45fa57e8cb707-6105324fa1114911a7d6b8d1425dbecc" >General</label>
+<input type="radio" id="98a0898dd370483faaa45fa57e8cb707-d43d7cc1b822479085cca22d569e84a6" name="98a0898dd370483faaa45fa57e8cb707" class="tab" ><label for="98a0898dd370483faaa45fa57e8cb707-d43d7cc1b822479085cca22d569e84a6" >Startup</label>
+<input type="radio" id="98a0898dd370483faaa45fa57e8cb707-a16b19cf7dab4e4184d85ffae338f974" name="98a0898dd370483faaa45fa57e8cb707" class="tab" ><label for="98a0898dd370483faaa45fa57e8cb707-a16b19cf7dab4e4184d85ffae338f974" >Android</label>
+<input type="radio" id="98a0898dd370483faaa45fa57e8cb707-26bf0b16d9e54da798155a92d1f582b6" name="98a0898dd370483faaa45fa57e8cb707" class="tab" ><label for="98a0898dd370483faaa45fa57e8cb707-26bf0b16d9e54da798155a92d1f582b6" >iOS</label>
+<input type="radio" id="98a0898dd370483faaa45fa57e8cb707-693e46d9154b4f0087592bf65a2e2673" name="98a0898dd370483faaa45fa57e8cb707" class="tab" ><label for="98a0898dd370483faaa45fa57e8cb707-693e46d9154b4f0087592bf65a2e2673" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
