--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -358,7 +358,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -370,11 +370,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="8cd522cc02bc42189065bf825754b22a-7ff0d8c4f3704d53917e08fc1c968bbd" name="8cd522cc02bc42189065bf825754b22a" class="tab" checked=""><label for="8cd522cc02bc42189065bf825754b22a-7ff0d8c4f3704d53917e08fc1c968bbd">General</label>
-<input type="radio" id="8cd522cc02bc42189065bf825754b22a-ef7af6cbfee348debbd95f5a2a69541a" name="8cd522cc02bc42189065bf825754b22a" class="tab"><label for="8cd522cc02bc42189065bf825754b22a-ef7af6cbfee348debbd95f5a2a69541a">Startup</label>
-<input type="radio" id="8cd522cc02bc42189065bf825754b22a-33452ab7ddda4a81ac9d137aae768b30" name="8cd522cc02bc42189065bf825754b22a" class="tab"><label for="8cd522cc02bc42189065bf825754b22a-33452ab7ddda4a81ac9d137aae768b30">Android</label>
-<input type="radio" id="8cd522cc02bc42189065bf825754b22a-57d6a4d98d444d998eeb2e91b0d50674" name="8cd522cc02bc42189065bf825754b22a" class="tab"><label for="8cd522cc02bc42189065bf825754b22a-57d6a4d98d444d998eeb2e91b0d50674">iOS</label>
-<input type="radio" id="8cd522cc02bc42189065bf825754b22a-58b4ed42fdf443429b47b49adc171ac6" name="8cd522cc02bc42189065bf825754b22a" class="tab"><label for="8cd522cc02bc42189065bf825754b22a-58b4ed42fdf443429b47b49adc171ac6">Windows</label>
+<input type="radio" id="15faebc688b243ebb297c04b0cd10a18-09874f2ce0644e7ba7f6b790fb52bdaf" name="15faebc688b243ebb297c04b0cd10a18" class="tab" checked=""><label for="15faebc688b243ebb297c04b0cd10a18-09874f2ce0644e7ba7f6b790fb52bdaf">General</label>
+<input type="radio" id="15faebc688b243ebb297c04b0cd10a18-4bbfcee3e75e4516b6689217e0ad7e69" name="15faebc688b243ebb297c04b0cd10a18" class="tab"><label for="15faebc688b243ebb297c04b0cd10a18-4bbfcee3e75e4516b6689217e0ad7e69">Startup</label>
+<input type="radio" id="15faebc688b243ebb297c04b0cd10a18-a9c4d87eaa784f1094f53bc1b093439f" name="15faebc688b243ebb297c04b0cd10a18" class="tab"><label for="15faebc688b243ebb297c04b0cd10a18-a9c4d87eaa784f1094f53bc1b093439f">Android</label>
+<input type="radio" id="15faebc688b243ebb297c04b0cd10a18-bff5048c113c44a79e9e9f48c0d5114f" name="15faebc688b243ebb297c04b0cd10a18" class="tab"><label for="15faebc688b243ebb297c04b0cd10a18-bff5048c113c44a79e9e9f48c0d5114f">iOS</label>
+<input type="radio" id="15faebc688b243ebb297c04b0cd10a18-3aaf1731f78b43b29fb048aa4407cbf1" name="15faebc688b243ebb297c04b0cd10a18" class="tab"><label for="15faebc688b243ebb297c04b0cd10a18-3aaf1731f78b43b29fb048aa4407cbf1">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
