--- a/release-notes/index.html
+++ b/release-notes/index.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -381,7 +381,7 @@
         <li><a href="/release-notes/v210-sr1">v2.1.x (July 2, 2021)</a></li>
         <li><a href="/release-notes/v220">v2.2.0 (July 30, 2021)</a></li>
         <li><a href="/release-notes/v230">v2.3.0</a></li>
-        <li><a href="/release-notes/231">v2.3.1</a></li>
+        <li><a href="/release-notes/v240">v2.4.0</a></li>
         <li><a href="/release-notes/nextrelease">v2.4.0</a></li>
 </ul>
                                 </div>
