--- a/release-notes/v240.html
+++ b/release-notes/v240.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - v2.3.1</title>
+    <title>Shiny.NET - v2.4.0</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">v2.3.1</div>
+                                <div class="text-white m-0 title">v2.4.0</div>
                             </div>
                         </div>
                     </div>
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child active">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -374,11 +374,17 @@
 <li>[Fix] Android 11+ opens a complete app when requesting permissions for location, thus permission requests could fail on Shiny in race scenarios.  Shiny no longer checks if the request is made on the foreground</li>
 <li>[Fix] Message bus named broadcast was not publishing <a href="https://github.com/shinyorg/shiny/issues/772">GH-772</a></li>
 </ul>
+<h2 id="bluetoothle">BluetoothLE</h2>
+<ul>
+<li>[Fix][Android] Background permission is no longer inserted into the manifest</li>
+</ul>
 <h2 id="locations">Locations</h2>
 <ul>
 <li>[Fix][Android] Location permissions for background must be done separate from other permissions now as per Android 11+</li>
 <li>[Fix][Android] Locations permission on Android 12 requires coarse &amp; fine permissions, even if you only need fine</li>
 <li>[Fix][iOS] Background was not respecting deferrals <a href="https://github.com/shinyorg/shiny/issues/783">GH-783</a></li>
+<li>[Enhancement][Android] Background permission is no longer enforced on package, but will throw an exception if it is requested and not put in the manifest</li>
+<li>[Enhancement][Android] Motion activity permission is no longer inserted automatically into your AndroidManifest.xml.  An exception is thrown in its place if it is not present in the manifest when it is requested.</li>
 <li>[Enhancement][Android] GpsRequest now has GpsBackgroundMode (None, Standard, RealTime).  Realtime creates the foreground service &amp; background is a periodic ping with GPS coordinates</li>
 <li>[Enhancement][iOS][Android] GpsRequest now has Precise (Android: Fine) that (on Android requests) ensures fine requirements are met or at least return AccessState.Restricted when they are not</li>
 </ul>
@@ -396,7 +402,7 @@
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/231.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/v240.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
