--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,10 +369,10 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="583b0052f468491f90c25c9ca8237360-f8e5688856fd48efb52ad6ce04dc98be" name="583b0052f468491f90c25c9ca8237360" class="tab" checked><label for="583b0052f468491f90c25c9ca8237360-f8e5688856fd48efb52ad6ce04dc98be" >General</label>
-<input type="radio" id="583b0052f468491f90c25c9ca8237360-a57ee48ef8044ab0a0fc3f0de4d9da8d" name="583b0052f468491f90c25c9ca8237360" class="tab" ><label for="583b0052f468491f90c25c9ca8237360-a57ee48ef8044ab0a0fc3f0de4d9da8d" >Startup</label>
-<input type="radio" id="583b0052f468491f90c25c9ca8237360-627817798d40456481a662ab998aae6c" name="583b0052f468491f90c25c9ca8237360" class="tab" ><label for="583b0052f468491f90c25c9ca8237360-627817798d40456481a662ab998aae6c" >Android</label>
-<input type="radio" id="583b0052f468491f90c25c9ca8237360-56234e2197af4b81af711a88a6160f2b" name="583b0052f468491f90c25c9ca8237360" class="tab" ><label for="583b0052f468491f90c25c9ca8237360-56234e2197af4b81af711a88a6160f2b" >Windows</label>
+<input type="radio" id="4c1cffc1ff0e445387080eda2d54d16b-cb9e0b2d68e84a8cbbb21a64603034a0" name="4c1cffc1ff0e445387080eda2d54d16b" class="tab" checked><label for="4c1cffc1ff0e445387080eda2d54d16b-cb9e0b2d68e84a8cbbb21a64603034a0" >General</label>
+<input type="radio" id="4c1cffc1ff0e445387080eda2d54d16b-748ff767027345b19c4c4fb3cc5acd0d" name="4c1cffc1ff0e445387080eda2d54d16b" class="tab" ><label for="4c1cffc1ff0e445387080eda2d54d16b-748ff767027345b19c4c4fb3cc5acd0d" >Startup</label>
+<input type="radio" id="4c1cffc1ff0e445387080eda2d54d16b-adb989d4ae14454c8a76fb0c0472d053" name="4c1cffc1ff0e445387080eda2d54d16b" class="tab" ><label for="4c1cffc1ff0e445387080eda2d54d16b-adb989d4ae14454c8a76fb0c0472d053" >Android</label>
+<input type="radio" id="4c1cffc1ff0e445387080eda2d54d16b-7c7939c5b8f44ec8ab2c3a2a434fe421" name="4c1cffc1ff0e445387080eda2d54d16b" class="tab" ><label for="4c1cffc1ff0e445387080eda2d54d16b-7c7939c5b8f44ec8ab2c3a2a434fe421" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
