--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -360,7 +360,7 @@
                                                             <a href="/release-notes/v230">v2.3.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/231">v2.3.1</a>
+                                                            <a href="/release-notes/v240">v2.4.0</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/nextrelease">v2.4.0</a>
@@ -369,11 +369,11 @@
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="c4765613f7b44c35b23f10247ec50fcb-3d874b1a00584ba4aea0ac9c5ca97058" name="c4765613f7b44c35b23f10247ec50fcb" class="tab" checked><label for="c4765613f7b44c35b23f10247ec50fcb-3d874b1a00584ba4aea0ac9c5ca97058" >General</label>
-<input type="radio" id="c4765613f7b44c35b23f10247ec50fcb-102b09f5d032498180608e058c19a85b" name="c4765613f7b44c35b23f10247ec50fcb" class="tab" ><label for="c4765613f7b44c35b23f10247ec50fcb-102b09f5d032498180608e058c19a85b" >Startup</label>
-<input type="radio" id="c4765613f7b44c35b23f10247ec50fcb-30efb0121c96469a829a649aee768788" name="c4765613f7b44c35b23f10247ec50fcb" class="tab" ><label for="c4765613f7b44c35b23f10247ec50fcb-30efb0121c96469a829a649aee768788" >Android</label>
-<input type="radio" id="c4765613f7b44c35b23f10247ec50fcb-db5baee256f94aab96085bf6eedb476e" name="c4765613f7b44c35b23f10247ec50fcb" class="tab" ><label for="c4765613f7b44c35b23f10247ec50fcb-db5baee256f94aab96085bf6eedb476e" >iOS</label>
-<input type="radio" id="c4765613f7b44c35b23f10247ec50fcb-fd9c0358735343ebbc81bcd77cc002ad" name="c4765613f7b44c35b23f10247ec50fcb" class="tab" ><label for="c4765613f7b44c35b23f10247ec50fcb-fd9c0358735343ebbc81bcd77cc002ad" >Windows</label>
+<input type="radio" id="dba8fcf9ffcb42f49e629733f737d374-d139ab831b894c7e901d99e0e7ceb8a1" name="dba8fcf9ffcb42f49e629733f737d374" class="tab" checked><label for="dba8fcf9ffcb42f49e629733f737d374-d139ab831b894c7e901d99e0e7ceb8a1" >General</label>
+<input type="radio" id="dba8fcf9ffcb42f49e629733f737d374-7e70150088bc40a1ab41e7ac9a5e6e36" name="dba8fcf9ffcb42f49e629733f737d374" class="tab" ><label for="dba8fcf9ffcb42f49e629733f737d374-7e70150088bc40a1ab41e7ac9a5e6e36" >Startup</label>
+<input type="radio" id="dba8fcf9ffcb42f49e629733f737d374-879b75b53be34ef9a40c06fe018cd349" name="dba8fcf9ffcb42f49e629733f737d374" class="tab" ><label for="dba8fcf9ffcb42f49e629733f737d374-879b75b53be34ef9a40c06fe018cd349" >Android</label>
+<input type="radio" id="dba8fcf9ffcb42f49e629733f737d374-3f4db379832a4d509d6e56bd6d21d4bf" name="dba8fcf9ffcb42f49e629733f737d374" class="tab" ><label for="dba8fcf9ffcb42f49e629733f737d374-3f4db379832a4d509d6e56bd6d21d4bf" >iOS</label>
+<input type="radio" id="dba8fcf9ffcb42f49e629733f737d374-73c57587731646139fc1c93b393534c2" name="dba8fcf9ffcb42f49e629733f737d374" class="tab" ><label for="dba8fcf9ffcb42f49e629733f737d374-73c57587731646139fc1c93b393534c2" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
